--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,8 +51,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:20.0.1'
     implementation 'com.google.firebase:firebase-firestore:24.2.1'
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.facebook.android:facebook-login:latest.release'
+    implementation 'com.facebook.android:facebook-login:14.1.0'
 }
