--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,9 +4,6 @@ plugins {
     id 'com.google.gms.google-services'
 }
 
-//Properties properties = new Properties()
-//properties.load(project.rootProject.file('local.properties').newDataInputStream())
-
 android {
     compileSdk 32
 
@@ -18,9 +15,6 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-//        buildConfigField("String", "fb_id", properties.getProperty("fb_id"))
-//        buildConfigField("String", "fb_token", properties.getProperty("fb_token"))
     }
 
     buildTypes {
@@ -47,13 +41,25 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    // 계정 인증
     implementation 'com.google.firebase:firebase-auth:21.0.6'
+    // 저장소
     implementation 'com.google.firebase:firebase-storage:20.0.1'
+    // DB
     implementation 'com.google.firebase:firebase-firestore:24.2.1'
+    // push알림
+    implementation 'com.google.firebase:firebase-messaging:23.0.7'
+    // google 로그인
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
+    // facebook 로그인
+    implementation 'com.facebook.android:facebook-login:14.1.0'
+
+    // gson -- JSON <-> JAVA
+    implementation 'com.google.code.gson:gson:2.9.1'
+
     implementation 'com.github.bumptech.glide:glide:4.13.2'
+    implementation 'com.google.firebase:firebase-analytics:21.1.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'com.facebook.android:facebook-login:14.1.0'
 }
